k8s/strapi-external-service.yml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  namespace: frontend
spec:
  type: ExternalName
  externalName: strapi-service.backend.svc.cluster.local
